[package]
name = "smartcontract"
version = "0.1.0"
edition = "2024"

[dependencies]
goblin = "0.9.3"
mach_o = "0.1.2"
pe-parser = "0.7.0"
reqwest = "0.12.15"
rocket = {version= "0.5.1", features = ["json","tls"]}
tokio = "1.44.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
tera = "1.20.0"
rocket_dyn_templates = { version = "0.2.0", features = ["handlebars", "tera", "minijinja"] }  # Enable the "tera" feature
chrono = "0.4"
